@@ -1,21 +1,19 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/enrichResult.R, R/gseaResult.R
 \docType{methods}
-\name{[,enrichResult-method}
-\alias{[,enrichResult-method}
-\alias{[,gseaResult-method}
-\title{[ method}
+\name{$,enrichResult-method}
+\alias{$,enrichResult-method}
+\alias{$,gseaResult-method}
+\title{$ method}
 \usage{
-\S4method{[}{enrichResult}(x, i)
+\S4method{$}{enrichResult}(x, name)
 
-\S4method{[}{gseaResult}(x, i, j)
+\S4method{$}{gseaResult}(x, name)
 }
 \arguments{
 \item{x}{enrichResult object}
 
-\item{i}{index}
-
-\item{j}{index}
+\item{name}{string}
 }
 \description{
 accessing enriched result
